samples/_failures_safe/1761307349_6acc5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11290a49.c: In function ‘main’:
./samples/SAFE/__tmp_11290a49.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
